--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,21 +2,26 @@
 <html>
 <head>
   <title>Traductor Español/Esperanto</title>
+  <link rel='stylesheet' href='/stylesheets/bootstrap-paper.min.css' />
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-  <h2>Descomposición de la oración: <%= sentence %></h2>
-  <table>
-    <tr>
-      <th>Posición</th>
-      <th>Palabra</th>
-    </tr>
-    <% words.forEach((word, index) => { %>
-    <tr>
-      <td><%= index %></td>
-      <td><%= word %></td>
-    </tr>
-    <% }) %>  
-  </table>
+  <div class="jumbotron">
+    <h2>Descomposición de la oración: <%= sentence %></h2>
+    <table class="table table-striped table-hover">
+      <tr>
+        <th>Posición</th>
+        <th>Palabra</th>
+        <th>Es un</th>
+      </tr>
+      <% words.forEach((word, index) => { %>
+      <tr>
+        <td><%= index %></td>
+        <td><%= word.name %></td>
+        <td><%= (word.types) ? word.types : 'Desconocida' %></td>
+      </tr>
+      <% }) %>  
+    </table>
+  </div>
 </body>
 </html>
