--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,10 @@
 </head>
 <body>
   <div class="jumbotron">
-    <h2>Descomposición de la oración: <%= sentence %></h2>
+    <h3>Descomposición de la oración: <%= sentence %></h3>
+    <% if(sintagma) { %>
+      <h4>La primer parte de la oración es un: <%= sintagma %></h4>
+    <% } %>
     <table class="table table-striped table-hover">
       <tr>
         <th>Posición</th>
