--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,26 +5,38 @@
   <link rel='stylesheet' href='/stylesheets/bootstrap-paper.min.css' />
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
-<body>
+<body style="background-color: #f5f5f5;">
   <div class="jumbotron">
-    <h3>Descomposición de la oración: <%= sentence %></h3>
-    <% if(sintagma) { %>
-      <h4>La primer parte de la oración es un: <%= sintagma %></h4>
+    <br>
+    <form action="/" method="GET">
+      <input type="text" name="sentence" value="" placeholder="Ingrese una oración" style="background-color: #f5f5f5; outline: none;">
+      <input type="submit" value="Consultar">
+    </form>
+    <% if (typeof sentence != 'undefined') { %>
+      <h3><%= sentence %></h3>
+      <% if (sintagmas && sintagmas.length > 0) { %>
+        <h4>La oración se compone de los sintagmas: <%= sintagmas.toString() %></h4>
+      <% } %>
+      <style>
+      h3:first-letter{
+        text-transform: capitalize
+      }
+      </style>  
+      <table class="table table-striped table-hover">
+        <tr>
+          <th>Posición</th>
+          <th>Palabra</th>
+          <th>Es un</th>
+        </tr>
+        <% words.forEach(word => { %>
+        <tr>
+          <td><%= word.index %></td>
+          <td><%= word.name %></td>
+          <td><%= (word.types) ? word.types.toString() : 'Desconocida' %></td>
+        </tr>
+        <% }) %>  
+      </table>
     <% } %>
-    <table class="table table-striped table-hover">
-      <tr>
-        <th>Posición</th>
-        <th>Palabra</th>
-        <th>Es un</th>
-      </tr>
-      <% words.forEach(word => { %>
-      <tr>
-        <td><%= word.index %></td>
-        <td><%= word.name %></td>
-        <td><%= (word.types) ? word.types.toString() : 'Desconocida' %></td>
-      </tr>
-      <% }) %>  
-    </table>
   </div>
 </body>
 </html>
